--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -20,18 +20,22 @@
   --primary-bg: #2699fb;
   --secondary-bg: #dbd6d6;
 
-  --btn-bg: #533ec9;
+  --btn-bg: #ffa500;
   --btn-color: #ffffff;
-  --btn-bg-h: rgb(97, 122, 207);
+  --btn-bg-h: #ee9e0a;
 
   --item-menu-color: #374151;
 
   --list-color: #15088b;
-  --bg-color-00: #f1f3f5;
+  --bg-color-00: #fff2f2;
   --bg-color-01: #ebebf7;
   --bg-color-02: #ffffff;
   --shadow-color: rgba(9, 36, 51, 0.12);
   --font-color-light: #092433;
 
-  --color-link: rgb(33, 13, 124);
+  --color-link: rgb(0, 0, 0);
+
+  --color-shadow:0 2px 4px rgba(0, 0, 0, 0.2);
+
+
 }
