--- a/src/app/layout/layout.scss
+++ b/src/app/layout/layout.scss
@@ -1,22 +1,33 @@
 .layout {
-    background-color: var(--bg-color-00);
-    display: grid;
-   position: relative;
-    grid-template-columns: 300px 1fr;
-    &__content{
-        padding: 0 var(--pm-x3);
-    }
-    @media (min-width: 1200px) {
-        grid-template-areas:
-        "nav header"
-        "nav main "
-        "nav main "
-        ". footer ";
-    }
-    @media (min-width: 992px) and (max-width: 1199px) {}
-    @media (max-width: 767px) {
+  background-color: var(--bg-color-00);
+  display: grid;
+  position: relative;
+  //    overflow: hidden;
 
-    }
+  &__content {
+    width: 100%;
+    grid-area: main;
+    padding: 0 var(--pm-x3);
+  }
+  @media (min-width: 1200px) {
+    grid-template-columns: 300px 1fr;
+    grid-template-areas:
+      "nav header"
+      "nav main "
+      "nav main "
+      ". footer ";
+  }
+  @media (min-width: 992px) and (max-width: 1199px) {
+  }
+  @media (max-width: 767px) {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "header"
+      "main "
+      "main "
+      "footer ";
+    padding-bottom: 60px;
+  }
 }
 // *::-webkit-scrollbar {
 //     height: 12px;
