--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -6,7 +6,28 @@
     font-family: "Montserrat";
    src: url(./../../shared/assets/fonts/Montserrat/static/Montserrat-Regular.ttf);
   }
+ /* Стилизация скроллбара */
+
+*::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    }
+   
+    *::-webkit-scrollbar-thumb {
+    background: #333;
+ 
+    }
+   
+    *::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    }
+   
+    *::-webkit-scrollbar-track-piece {
+    background: #f1f1f1;
+    }  
 .app {
+   
+   
     height: 100%;
     
     font-family: Montserrat;
