--- a/src/shared/ui/QR/QR.scss
+++ b/src/shared/ui/QR/QR.scss
@@ -1,11 +1,16 @@
 .qr-code-wrap{
-    width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-svg{
-    height: 100PX;
-    width: 100px;
+    border-radius: var(--cr-m);
+    background-color: white;
+    aspect-ratio: 1;
+    padding: var(--pm-x);
+
 }
+.qr_code__wrap{
+    border-radius: var(--cr-m);
+    background-color: white;
+    aspect-ratio: 1;
+    padding: var(--pm-x);
 }
