--- a/src/widgets/navigation/ui/nav.scss
+++ b/src/widgets/navigation/ui/nav.scss
@@ -2,7 +2,7 @@
   grid-area: nav;
   width: 100%;
   height: 100vh;
-  background-color: var(--bg-color-01);
+  // background-color: var(--bg-color-01);
   padding: 20px;
   display: grid;
   grid-template-rows: 1fr 60px;
@@ -16,7 +16,28 @@
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently
                                 supported by Chrome, Edge, Opera and Firefox */
-  // &__top {
+  /* Для мобильных устройств */
+@media screen and (max-width: 768px) {
+  position: absolute;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  background-color: var(--bg-color-02);
+
+}
+
+/* Для планшетов */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  /* Ваш CSS код для планшетов */
+
+}
+
+/* Для ПК */
+@media screen and (min-width: 1200px) {
+  /* Ваш CSS код для ПК */
+
+}
+                                // &__top {
   // }
   &__container-nav {
     font-size: 20px;
@@ -27,8 +48,7 @@
     overflow: hidden;
   }
 
-  // &__bottom {
-  // }
+
   ul,
   ol,
   li {
@@ -42,6 +62,7 @@
     row-gap: var(--pm-s);
   }
   .ui-vertical-navigation-item__wrapper {
+
     padding: var(--pm-s) var(--pm-x);
     border-radius: var(--cr-s);
     color: var(--item-menu-color);
@@ -57,4 +78,20 @@
   .hover__item {
     // background-color: red;
   }
+}
+.wrap__nav___btn{
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  padding: var(--pm-x);
+  z-index: 80;
+  display: flex;
+  justify-content: end;
+  background-color: var(--bg-color-02);
+
+}
+.menu__bottom {
+  width: 100%;
+  display: flex;
+
 }
