--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -27,11 +27,11 @@
   --item-menu-color: #374151;
 
   --list-color: #15088b;
-  --bg-color-00: #fff2f2;
+  --bg-color-00: #F0F2F5;
   --bg-color-01: #ebebf7;
   --bg-color-02: #ffffff;
   --shadow-color: rgba(9, 36, 51, 0.12);
-  --font-color-light: #092433;
+  --font-color-light: #000000;
 
   --color-link: rgb(0, 0, 0);
 
