--- a/src/widgets/header/ui/header.scss
+++ b/src/widgets/header/ui/header.scss
@@ -3,7 +3,7 @@
     height: 60px;
     grid-area: header;
     // border-bottom: 1px solid var(--border);
-    background-color: var(--bg-color-00);
+    // background-color: var(--bg-color-00);
     // background-color: #00000000;
     top: 0;
     position: sticky;
