--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -35,6 +35,10 @@
         font-family: Montserrat;
     }
 }
+.shadow__style{
+    -webkit-box-shadow: 0 1px 1px rgba(32, 35, 51, .04), 0 2px 4px rgba(32, 35, 51, .02); 
+    box-shadow: 0 1px 1px rgba(32, 35, 51, .04), 0 2px 4px rgba(32, 35, 51, .02);
+}
 // * {
 //     scrollbar-width: thin;
 //     scrollbar-color: blue var(--bg-color-00);
