--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -20,22 +20,23 @@
   --primary-bg: #2699fb;
   --secondary-bg: #dbd6d6;
 
-  --btn-bg: #ffa500;
+  --btn-bg:#4096FF;
   --btn-color: #ffffff;
-  --btn-bg-h: #ee9e0a;
+  --btn-bg-h: #40a9ff;
 
   --item-menu-color: #374151;
 
   --list-color: #15088b;
-  --bg-color-00: #F0F2F5;
+  --bg-color-00: #FAE3EA;
   --bg-color-01: #ebebf7;
+ --bg-color-nav: #F3F7FC;
+ --bg-color-nav-item:#ffffff;
   --bg-color-02: #ffffff;
   --shadow-color: rgba(9, 36, 51, 0.12);
   --font-color-light: #000000;
 
   --color-link: rgb(0, 0, 0);
-
-  --color-shadow:0 2px 4px rgba(0, 0, 0, 0.2);
-
+  --QRClolor:rgb(0, 0, 0);
+ 
 
 }
