--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -39,6 +39,82 @@
     -webkit-box-shadow: 0 1px 1px rgba(32, 35, 51, .04), 0 2px 4px rgba(32, 35, 51, .02); 
     box-shadow: 0 1px 1px rgba(32, 35, 51, .04), 0 2px 4px rgba(32, 35, 51, .02);
 }
+
+
+body {
+    // font-family: 'Open Sans', sans-serif;
+    // line-height: 1.5;
+    // font-weight: 400;
+    margin: 0;
+
+    min-height: 100vh;
+    scroll-behavior: smooth;
+    text-rendering: optimizeSpeed;
+
+    overflow-x: hidden;
+}
+
+body,
+html,
+#root {
+    height: 100%;
+}
+
+._container {
+    max-width: 1230px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+/* ol,
+ul {
+    list-style: none;
+    padding: 0;
+} */
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+ul,
+ol,
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+    margin: 0;
+}
+
+// h1,
+// h2,
+// h3,
+// h4,
+// h5 {
+//     font-weight: 400;
+// }
+
+input,
+button {
+    outline: none;
+}
+
+a {
+    text-decoration: none;
+}
+
 // * {
 //     scrollbar-width: thin;
 //     scrollbar-color: blue var(--bg-color-00);
