--- a/src/widgets/CardRead/ui/CardRead.scss
+++ b/src/widgets/CardRead/ui/CardRead.scss
@@ -3,17 +3,24 @@
 
   display: flex;
   flex-direction: column;
-  color: var(--font-color-light);
   justify-content: space-between;
+  color: var(--font-color-light);
+
   overflow: hidden;
   row-gap: 10px;
   border-radius: var(--cr-x);
+
   &_content {
+    flex-grow: 1;
+    width: 100%;
+    // display: flex;
+
     padding: 0 var(--pm-x) var(--pm-x) var(--pm-x);
   }
   // box-shadow: 0 12px 20px var(--shadow-color), 0 0 2px var(--shadow-color);
   &__img__wrap {
     width: 100%;
+    aspect-ratio: 16 / 9;
     overflow: hidden;
   }
   &_top-bar {
@@ -22,24 +29,27 @@
     align-items: center;
   }
   &__type {
-    background-color:#068606 ;
+    background-color: #068606;
     color: white;
     border-radius: var(--cr-s);
     padding: var(--pm-s) var(--pm-x);
   }
-  &_title{
- font-weight: bold;
- margin-bottom: var(--pm-s);
+  &_title {
+
+    font-weight: bold;
+    margin-bottom: var(--pm-x);
   }
   img {
     border-radius: calc(var(--cr-x) - var(--pm-x));
     width: 100%;
-    aspect-ratio: 16 / 9;
+   
   }
   &_bottom-bar {
-    padding-top: var(--pm-m);
+    padding: var(--pm-m);
+
     display: flex;
     justify-content: end;
+
     // border-top: 1px solid #585858;
   }
   &_wrap_date {
