--- a/src/widgets/header/ui/header.scss
+++ b/src/widgets/header/ui/header.scss
@@ -1,18 +1,13 @@
-.Header{
-    width: 100%;
-    height: 60px;
-    grid-area: header;
-    // border-bottom: 1px solid var(--border);
-    // background-color: var(--bg-color-00);
-    // background-color: #00000000;
-    top: 0;
-    position: sticky;
-    z-index: 99;
-    // box-shadow: 0 12px 20px var(--shadow-color), 0 0 2px var(--shadow-color);
-    display: flex;
-    align-items: center;
-    padding:0 var(--pm-x3);
-    justify-content: space-between;
- 
-    // backdrop-filter: blur(10px);
+.Header {
+  width: 100%;
+  grid-area: header;
+  top: 0;
+  position: sticky;
+  z-index: 99;
+  display: flex;
+  align-items: start;
+  padding: var(--pm-x) var(--pm-x3);
+  justify-content: space-between;
+  gap: var(--pm-x3);
+  background-color: var(--bg-color-00);
 }
