--- a/src/widgets/navigation/ui/nav.scss
+++ b/src/widgets/navigation/ui/nav.scss
@@ -2,12 +2,9 @@
   grid-area: nav;
   width: 100%;
   height: 100vh;
-  // background-color: var(--bg-color-01);
-  padding: 20px;
-  display: grid;
-  grid-template-rows: 1fr 60px;
+  padding: var(--pm-x) 0  var(--pm-x) var(--pm-x);
 
-  row-gap: 10px;
+  // row-gap: 10px;
   position: sticky;
   top: 0px;
   -webkit-touch-callout: none; /* iOS Safari */
@@ -17,42 +14,47 @@
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently
                                 supported by Chrome, Edge, Opera and Firefox */
+  .nav-container {
+    background-color: var(--bg-color-nav);
+    width: 100%;
+    padding: var(--pm-m);
+    display: grid;
+    grid-template-rows: 1fr 60px;
+  }
+
   /* Для мобильных устройств */
-@media screen and (max-width: 768px) {
-  position: absolute;
-  z-index: 99;
-  top: 0;
-  left: 0;
-  background-color: var(--bg-color-02);
 
-}
+  @media screen and (max-width: 768px) {
+    position: absolute;
+    z-index: 99;
+    top: 0;
+    left: 0;
+  }
 
-/* Для планшетов */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  /* Ваш CSS код для планшетов */
+  /* Для планшетов */
+  @media screen and (min-width: 768px) and (max-width: 1024px) {
+    /* Ваш CSS код для планшетов */
+  }
 
-}
+  /* Для ПК */
+  @media screen and (min-width: 1200px) {
+    .nav-container {
+      border-radius: var(--cr-m);
+    }
+  
+    // margin: var(--pm-x);
+    // top: var(--pm-x);
+    // height: calc(100vh - var(--pm-x) * 2);
+  }
 
-/* Для ПК */
-@media screen and (min-width: 1200px) {
-  /* Ваш CSS код для ПК */
-  background-color: var(--bg-color-02);
-  border-radius: var(--cr-m);
-  margin: var(--pm-x) ;
-  top: var(--pm-x) ;
-  height:calc(100vh - var(--pm-x)*2) ;
-}
-                                // &__top {
-  // }
   &__container-nav {
-    font-size: 20px;
+    // font-size: var(--pm-s);
     color: var(--font-color-light);
     a {
       color: var(--font-color-light);
     }
     overflow: hidden;
   }
-
 
   ul,
   ol,
@@ -64,12 +66,12 @@
   .ui-vertical-navigation__list-item {
     display: flex;
     flex-direction: column;
-    row-gap: var(--pm-s);
+    row-gap: var(--pm-m);
   }
   .ui-vertical-navigation-item__wrapper {
-
     padding: var(--pm-s) var(--pm-x);
-    border-radius: var(--cr-s);
+    border-radius: var(--cr-xs);
+    background-color: var(--bg-color-nav-item);
     color: var(--item-menu-color);
     &:hover {
       background-color: var(--btn-bg-h);
@@ -84,7 +86,7 @@
   //   // background-color: red;
   // }
 }
-.wrap__nav___btn{
+.wrap__nav___btn {
   width: 100%;
   position: fixed;
   bottom: 0;
@@ -92,12 +94,48 @@
   z-index: 80;
   display: flex;
   justify-content: end;
-  background-color: var(--bg-color-02);
-
+  // background-color: var(--bg-color-02);
 }
 .menu__bottom {
   width: 100%;
   display: flex;
   justify-content: space-between;
+}
+.nav_menu_tree-header{
+  position: relative;
+  &-icon{
+    position: absolute;
+    top: 50%;
+    right: var(--pm-s);
+    width: 40px;
+    height: 40px;
+    // background-color: red;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.nav_menu-content_tree{
+  background-color: var(--bg-color-nav-item);
 
+  border-radius: var(--cr-s);
+  display: flex;
+  flex-direction: column;
+  // row-gap: var(--pm-m);
+  &-list{ 
+  padding: 0 var(--pm-s);
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--pm-m);
+  .nav_menu-content_item{
+
+    &:first-child{
+      margin-top: var(--pm-m);
+    }
+   &:last-child{
+    margin-bottom:var(--pm-m);
+   }
+  }
+  }
 }
